--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#d43840</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="cardview1colour">#DB4437</color>
+    <color name="cardview2colour">#4285F4</color>
+    <color name="cardview3colour">#0F9D58</color>
+    <color name="cardview4colour">#FFC107</color>
+    <color name="textColor">#355b78</color>
 </resources>
+
