--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -90,7 +90,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/VitText"
-            android:textSize="30sp"
+            android:textSize="25sp"
+            android:alpha="0.8"
             android:layout_marginTop="20dp"
             android:textColor="@color/textColor"
             android:fontFamily="sans-serif"
@@ -101,6 +102,7 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:src="@drawable/ic_astro"
+        android:alpha="0.8"
         android:id="@+id/astronaut"
         android:layout_marginTop="350dp"
         android:layout_marginLeft="200dp"
