--- a/app/src/main/res/layout/fragment_myteam.xml
+++ b/app/src/main/res/layout/fragment_myteam.xml
@@ -10,7 +10,7 @@
     >
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/main.appbar"
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="220dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
@@ -19,7 +19,7 @@
 
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/main.collapsing"
+            android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
@@ -31,7 +31,7 @@
             >
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/main.toolbar"
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
@@ -43,6 +43,7 @@
                     android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Ramkishore"
@@ -50,14 +51,16 @@
                     android:textColor="@android:color/white"
                     />
                     <TextView
+                        android:id="@+id/regno"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="13MSE0254"/>
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="GDG VIT VELLORE"
-                        android:layout_marginTop="40dp"
+                        android:layout_marginTop="20dp"
                         android:textSize="22sp"
                         android:textStyle="bold"/>
                 </LinearLayout>
@@ -80,8 +83,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <android.support.v7.widget.CardView
-                android:id="@+id/flexible.example.cardview"
+                android:id="@+id/cardview"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_margin="8dp"
