--- a/app/src/main/res/layout/activity_about_list_row_title.xml
+++ b/app/src/main/res/layout/activity_about_list_row_title.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.CardView android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_margin="@dimen/activity_horizontal_margin">
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/about_list_item_header"
@@ -17,4 +14,3 @@
         android:textSize="16sp"
         android:padding="@dimen/activity_horizontal_margin"/>
 </LinearLayout>
-    </android.support.v7.widget.CardView>
