--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_vertical_margin_24dp">24dp</dimen>
+    <dimen name="text_padding_right">10dp</dimen>
+    <dimen name="expandable_recycler_padding">30dp</dimen>
 </resources>
