--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,57 +18,66 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="12dp"
+            android:padding="@dimen/activity_vertical_margin_24dp"
             android:layout_gravity="center_horizontal"
             android:gravity="center"
             >
 
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/email_input_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColorHint="@color/text_hint"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_marginBottom="@dimen/activity_vertical_margin">
 
-            <android.support.design.widget.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="12dp" />
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="15dp"
+                    android:hint="@string/emailHint"
+                    android:textColorHint="@color/fade_white"
+                    android:textColor="@color/white"/>
 
-        <EditText
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:textColorHint="@color/white"
-            android:hint="@string/emailHint"
-            />
-        <android.support.design.widget.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            </android.support.design.widget.TextInputLayout>
 
-        <EditText
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:textColorHint="@color/white"
-            android:inputType="textPassword"
-            android:hint="@string/passwordHint"
-            />
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/password_input_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_vertical_margin">
 
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/passwordHint"
+                    android:inputType="textPassword"
+                    android:paddingBottom="15dp"
+                    android:textColorHint="@color/fade_white"
+                    android:textColor="@color/white"/>
 
-        <Button
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/buttonbackground"
-            android:text="@string/SignIn"
-            android:textColor="@color/white"
-            />
+            </android.support.design.widget.TextInputLayout>
 
+            <Button
+                android:id="@+id/login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/SignIn"
+                android:background="@color/colorPrimary"
+                android:textColor="@color/white"/>
+            
             <TextView
-                android:paddingTop="18dp"
-                android:paddingBottom="18dp"
-                android:textColor="@color/white"
+                android:id="@+id/guest_login"
+                android:textColor="@color/text_hint"
+                android:layout_marginTop="@dimen/activity_vertical_margin_24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/GuestContinue"
-                android:textSize="15sp"
-                />
+                android:text="@string/GuestContinue"/>
+
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
-
-
-
 
 </LinearLayout>
