--- a/app/src/main/res/layout/fragment_myteam.xml
+++ b/app/src/main/res/layout/fragment_myteam.xml
@@ -42,16 +42,16 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Ramkishore"
-                    android:textSize="22sp"
-                    android:textColor="@android:color/white"
-                    />
                     <TextView
-                        android:id="@+id/regno"
+                        android:id="@+id/yourname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Ramkishore"
+                        android:textSize="22sp"
+                        android:textColor="@android:color/white"
+                        />
+                    <TextView
+                        android:id="@+id/yourregno"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="13MSE0254"/>
@@ -64,7 +64,7 @@
                         android:textSize="22sp"
                         android:textStyle="bold"/>
                 </LinearLayout>
-                </android.support.v7.widget.Toolbar>
+            </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
@@ -87,7 +87,7 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/cardview"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="150dp"
                 android:layout_margin="8dp"
                 app:cardBackgroundColor="@android:color/white"
                 app:cardCornerRadius="0dp"
@@ -98,26 +98,93 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-                   <TextView
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:text="Team Members"
-                       android:layout_gravity="center_horizontal"
-                       android:textSize="22sp"/>
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="16dp"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/teamMenbers"
+                        android:text="Team Members"
+                        android:textStyle="bold"
+                        android:textSize="20sp"/>
+
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/teamMember1"
+                        android:text="Team Members"
+                        android:textStyle="italic"
+                        android:textSize="18sp"/>
+                    <TextView
+                        android:layout_marginLeft="20dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/teamMember2"
+                        android:text="Team Members"
+                        android:textStyle="italic"
+                        android:textSize="18sp"/>
+                    <TextView
+                        android:layout_marginLeft="20dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/teamMember3"
+                        android:text="Team Members"
+                        android:textStyle="italic"
+                        android:textSize="18sp"/>
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+
+            <android.support.v7.widget.CardView
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                app:cardElevation="6dp"
+                android:layout_margin="8dp"
+                app:contentPaddingLeft="16dp"
+                app:contentPaddingRight="16dp"
+                app:cardBackgroundColor="@android:color/white"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center|left"
+                    android:padding="16dp"
+                    >
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Assigned Apis"
+                        android:textStyle="bold"
+                        android:textSize="20sp"
+
+                        />
+
+                    <android.support.v7.widget.RecyclerView
+
+                        android:layout_marginTop="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/apisRecView"
+                        >
+
+
+                    </android.support.v7.widget.RecyclerView>
 
 
                 </LinearLayout>
+
+
             </android.support.v7.widget.CardView>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="10dp"
-                android:textSize="18sp"
-                android:lineSpacingExtra="4dp"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                />
+
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
