--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="activity_vertical_margin_24dp">24dp</dimen>
     <dimen name="text_padding_right">10dp</dimen>
     <dimen name="expandable_recycler_padding">30dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
