--- a/app/src/main/res/layout/fragment_timeline_card.xml
+++ b/app/src/main/res/layout/fragment_timeline_card.xml
@@ -1,34 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.CardView android:layout_width="120dp"
-    android:layout_height="110dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="5dp"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="120dp"
+    android:layout_margin="20dp"
     android:layout_height="match_parent"
-    android:weightSum="3">
+    card_view:cardCornerRadius="5dp"
+    card_view:cardElevation="5dp"
+    card_view:cardBackgroundColor="@color/white">
 
-    <TextView
-        android:id="@+id/phase_name"
-        android:layout_weight="2"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:text="Hackathon phase 1"
-        android:padding="8dp"
-        android:textColor="@color/white"
-        android:background="@color/colorPrimary"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/phase_time"
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:text="10:30 - 1 AM"
-        android:padding="8dp"
-        android:textColor="@color/white"
-        android:background="@color/colorPrimary"/>
+        <TextView
+            android:id="@+id/phase_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:text="Hackathon phase 1"
+            android:textColor="@color/colorPrimary" />
 
-</LinearLayout>
-    </android.support.v7.widget.CardView>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/horizontal_line_color"/>
+
+        <TextView
+            android:id="@+id/phase_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/textv_selector"
+            android:padding="8dp"
+            android:text="10:30 - 1 AM"
+            android:textColor="@color/black" />
+
+    </LinearLayout>
+</android.support.v7.widget.CardView>
