--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="window_bg">#272739</color>
     <color name="transparent">#00ffffff</color>
     <color name="text_hint">#d3d3d3</color>
+    <color name="horizontal_line_color">#14FFFFFF</color>
+    <color name="black">#000000</color>
 
 </resources>
 
