--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="10">
+    android:background="@color/colorPrimary"
+    android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:layout_height="60dp"
         android:weightSum="2"
-        android:layout_weight="1"
+        android:layout_alignParentTop="true"
+        android:background="@color/colorPrimary"
         android:paddingLeft="@dimen/activity_vertical_margin"
         android:paddingRight="@dimen/activity_vertical_margin"
         android:gravity="center_vertical"
@@ -36,61 +37,30 @@
             android:textSize="14sp"
             android:layout_weight="1"
             android:gravity="end"/>
-
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.2dp"
+        android:background="@color/white"
+        android:layout_above="@+id/pager"/>
 
-    <!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:text="Timeline Layout. Should be implemented same as about. Please refer fragment_about.xml."-->
-    <!--android:padding="20dp"-->
-    <!--android:textColor="@color/white"/>-->
-<!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:text="Also checkout About page from navigation."-->
-    <!--android:padding="20dp"-->
-    <!--android:textColor="@color/white"/>-->
-
-<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--android:orientation="vertical"-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="match_parent"-->
-<!--android:background="@color/material_dark"-->
-<!--android:weightSum="10">-->
-
-
-<com.gdgvitvellore.devfest.Entity.Customs.VerticalViewPager
+<android.support.v4.view.ViewPager
     android:id="@+id/pager"
-    android:visibility="gone"
-    android:layout_weight="7"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
+    android:layout_below="@+id/banner"
     android:background="@color/colorPrimary"
-    />
-
-<HorizontalScrollView
     android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="2">
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:background="@color/material_dark"
-        android:padding="@dimen/activity_vertical_margin_24dp">
+    android:layout_height="wrap_content"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/phases_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:scrollbars="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:scrollbars="none"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:background="@color/material_dark"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
 
-    </LinearLayout>
-</HorizontalScrollView>
-
-</LinearLayout>
+</RelativeLayout>
