--- a/app/src/main/res/layout/fragment_timeline_card.xml
+++ b/app/src/main/res/layout/fragment_timeline_card.xml
@@ -4,6 +4,9 @@
     android:layout_height="110dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="5dp"
+    android:layout_margin="8dp"
+    android:focusable="true"
+    android:clickable="true"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
@@ -15,10 +18,9 @@
         android:layout_weight="2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:textStyle="bold"
         android:text="Hackathon phase 1"
-        android:padding="8dp"
-        android:textColor="@color/white"
-        android:background="@color/colorPrimary"/>
+        android:padding="8dp"/>
 
     <TextView
         android:id="@+id/phase_time"
@@ -26,9 +28,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:text="10:30 - 1 AM"
-        android:padding="8dp"
         android:textColor="@color/white"
-        android:background="@color/colorPrimary"/>
+        android:background="@color/colorPrimary"
+        android:padding="8dp"/>
 
 </LinearLayout>
     </android.support.v7.widget.CardView>
