--- a/app/src/main/res/layout/fragment_timeline_display.xml
+++ b/app/src/main/res/layout/fragment_timeline_display.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="430dp"
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:background="@color/colorPrimary">
 
     <ImageView
         android:id="@+id/timeline_display"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="240dp"
+        android:layout_height="240dp"
         android:src="@drawable/ic_astro"/>
 
 </LinearLayout>
