--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -8,5 +8,6 @@
         <item>@drawable/ic_android_black_24dp</item>
         <item>@drawable/ic_android_black_24dp</item>
         <item>@drawable/ic_android_black_24dp</item>
+        <item>@drawable/ic_android_black_24dp</item>
     </array>
 </resources>
