--- a/app/src/main/res/layout/fragment_coupons_item.xml
+++ b/app/src/main/res/layout/fragment_coupons_item.xml
@@ -1,28 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:gravity="center"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@drawable/roundrect1"
-    android:layout_width="wrap_content"
     android:layout_marginRight="10dp"
-    android:layout_height="wrap_content">
+    android:background="@drawable/roundrect1"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
-        android:layout_width="200dp"
-        android:layout_height="180dp"
         android:id="@+id/card"
-        >
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        card_view:cardCornerRadius="10dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <TextView
-            android:paddingTop="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Coupon"
-            android:id="@+id/apiName"
-            />
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@drawable/ic_cupcake" />
+
+            <TextView
+                android:id="@+id/apiName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="10dp"
+                android:text="Lunch Coupon"
+                android:textSize="@dimen/text_size_large"
+                android:textStyle="bold" />
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 </LinearLayout>
