--- a/app/src/main/res/layout/fragment_faq_general.xml
+++ b/app/src/main/res/layout/fragment_faq_general.xml
@@ -8,8 +8,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.gdgvitvellore.devfest.Entity.FAQ.ActivityFAQMain"
-    tools:showIn="@layout/activity_faq_mrmojo">
+    tools:context="com.gdgvitvellore.devfest.Entity.FAQ.FAQFragment"
+    tools:showIn="@layout/fragment_faq">
 
 
     <LinearLayout
