--- a/app/src/main/res/layout/fragment_faq.xml
+++ b/app/src/main/res/layout/fragment_faq.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.gdgvitvellore.devfest.Entity.FAQ.FAQFragment">
+    tools:context="com.gdgvitvellore.devfest.Entity.FAQ.Fragments.FAQFragment">
 
     <android.support.design.widget.AppBarLayout
         android:focusable="true"
