--- a/app/src/main/res/layout/fragment_faq_general.xml
+++ b/app/src/main/res/layout/fragment_faq_general.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.gdgvitvellore.devfest.Entity.FAQ.FAQFragment"
+    tools:context="com.gdgvitvellore.devfest.Entity.FAQ.Fragments.FAQFragment"
     tools:showIn="@layout/fragment_faq">
 
 
@@ -50,4 +50,4 @@
     </LinearLayout>
 
 
-</android.support.v4.widget.NestedScrollView>
+    </android.support.v4.widget.NestedScrollView>
