--- a/app/src/main/res/layout/fragment_coupons.xml
+++ b/app/src/main/res/layout/fragment_coupons.xml
@@ -31,9 +31,9 @@
                 android:gravity="center">
             
             <ImageView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                app:srcCompat="@drawable/ic_qrcode"/>
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:id="@+id/qr_code"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
