--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -113,6 +113,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/activity_vertical_margin_24dp"
+                android:visibility="invisible"
                 android:text="@string/GuestContinue"
                 android:textColor="@color/text_hint" />
 
