--- a/app/src/main/res/layout/fragment_about_group_item.xml
+++ b/app/src/main/res/layout/fragment_about_group_item.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -31,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/speaker_one"
-                android:textColor="@color/white"
+                android:textColor="@color/textColorPrimary"
                 android:textSize="14sp" />
 
             <TextView
